--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+  <script src="//at.alicdn.com/t/font_1463538_lvleasqqi5.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
