chore: delete 'Loading'

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,6 +10,6 @@
     <script src="assets/svg/iconfont.js"></script>
   </head>
   <body>
-    <app-root>Loading...</app-root>
+    <app-root></app-root>
   </body>
 </html>
